reflect-demo/tests/errors/invalid_reflect_on_nested_struct.stderr
error[E0277]: the trait bound `TestStructNested: Input` is not satisfied
 --> tests/errors/invalid_reflect_on_nested_struct.rs:3:9
  |
3 |     _f: TestStructNested,
  |         ^^^^^^^^^^^^^^^^ the trait `Input` is not implemented for `TestStructNested`
  |
  = help: the following other types implement trait `Input`:
            bool
            char
            i8
            i16
            i32
            i64
            u8
            u16
          and $N others

error[E0277]: the trait bound `TestStructNested: reflect::Output` is not satisfied
 --> tests/errors/invalid_reflect_on_nested_struct.rs:3:9
  |
3 |     _f: TestStructNested,
  |         ^^^^^^^^^^^^^^^^ the trait `reflect::Output` is not implemented for `TestStructNested`
  |
  = help: the following other types implement trait `reflect::Output`:
            bool
            char
            i8
            i16
            i32
            i64
            u8
            u16
          and $N others
